# ai-toybox

./: .env.example  .gitignore  Dockerfile  Dockerfile.inspector  README.md  TODO.md  agent_handler.py  agent_service.py  api_server.py  docker-compose.yml  index.html  log_utils.py  main.py  main_streaming_agent.py  mcp_config.json  pyproject.toml  requirements.txt  terminal_client.py
api-test-app/: index.html
api-test-app/css/: styles.css
api-test-app/js/: app.js  components.js
app/: Dockerfile  README.md  docker-compose.yml  mcp_config.json  pyproject.toml
app/server/: agent.py  server.py
app/server/utils/: mcp_config.py
app/src/server/: agent.py  server.py
frontend/: chat.html  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: Alert.js  Card.js  SendEmail.js  Template.js  Video.js
frontend/src/core/: BaseElement.js
frontend/src/styles/: global.css
mcp-server-template/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-server-template/src/custom_mcp_server/: __init__.py  server.py  tools_registry.py
mcp-server-template/src/custom_mcp_server/tools/: __init__.py  math_tools.py  tools.py
mcp-server-template/src/mcp_server_math/: __init__.py  server.py
mcp-server-template/src/mcp_server_math/tools/: math_tools.py
src/: main.py  server.py
src/chat/: agent.py
src/core/: __init__.py  agent.py  mcp_server.py
src/interfaces/: __init__.py
src/mcp/: mcp_aggregate_server.py  mcp_server.py
src/utils/: __init__.py  logging.py
src/web_client/: index.html
(+27 files in other folders)
