[project]
name = "mcp-server-math"
version = "0.1.0"
description = "A simple MCP server for basic math operations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]

[project.scripts]
mcp-server-math = "mcp_server_math:main"
